# tideorm-cli

./: CHANGELOG.md  Cargo.toml  README.md
src/: config.rs  main.rs  runtime_db.rs  utils.rs
src/commands/: config.rs  db.rs  init.rs  make.rs  migrate.rs  mod.rs  models.rs  schema.rs  ui.rs
src/generators/: controller.rs  factory.rs  migration.rs  mod.rs  model.rs  seeder.rs
src/ui/: app.js  index.html  style.css
tests/: generated_project.rs
