[package]
name = "tideorm-cli"
version = "0.8.7"
edition = "2024"
description = "Command-line interface for TideORM"
authors = ["Mohamad Al Zohbie"]
license = "MIT"
repository = "https://github.com/mohamadzoh/tideorm-cli"
keywords = ["orm", "cli", "database", "migration", "rust"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "tideorm"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.6.0", features = ["derive", "env", "color"] }

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# File system
walkdir = "2.5.0"

# Time
chrono = "0.4.44"

# Colors for terminal output
colored = "3.1.1"

# Regex for parsing
regex = "1.12.3"

# String case conversion
heck = "0.5.0"

# Pluralization
pluralizer = "0.5.0"

# Template engine for code generation
minijinja = "2.18.0"

# Dialoguer for interactive prompts
dialoguer = "0.12.0"

# Indicatif for progress bars
indicatif = "0.18.4"

# Console utilities
console = "0.16.3"

# Lightweight HTTP server for web UI
tiny_http = "0.12"

# Local TideORM runtime for live database access
tideorm = {version = "0.8.7", default-features = false, features = ["postgres", "mysql", "sqlite", "runtime-tokio"] }

[features]
default = []
# runtime = ["tideorm"]

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2.2.0"
predicates = "3.1.4"
